--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,20 @@
 @tailwind utilities;
 
 :root {
-  --background-color-dark: #0b1625;
-  --text-color-dark: #ffffff;
+  --background: #072044;
+  --foreground: #171717;
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #ffffffa7;
+    --foreground: #ededed;
+  }
+}
 
 body {
-  background-color: var(--background-color-dark);
-  color: var(--text-color-dark);
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
 }
+
